Added sign in API request template
