# main.go
@@ -11,6 +11,7 @@ import (
 	"syscall"
 	_ "time"
 
+	auth "ccu/api/auth"
 	test "ccu/api/test"
 
 	log "github.com/sirupsen/logrus"
@@ -42,6 +43,7 @@ func main() {
 // Requests
 func handleRequests(r *mux.Router) {
 	r.HandleFunc("/api/v1/test-no-auth", test.GetTest).Methods("GET")
+	r.HandleFunc("/api/v1/signin-auth", auth.PostSignIn).Methods("POST")
 }
 
 // Build log output file
